# rust-actix-api-example

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  docker-compose.yml
migrations/2023-06-24-233223_create_table/: up.sql
src/: config.rs  errors.rs  main.rs  state.rs  swagger.rs
src/api/: dto.rs  links.rs  mod.rs
src/db/: schema.rs
src/models/: url.rs
src/routes/auth/: authorization.rs  dto.rs  mod.rs
src/services/: link.rs
