[package]
name = "rest-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.3.1"
diesel = { version = "2.1.0", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
env_logger = "0.10.0"
num_cpus = "1.15.0"
serde = { version = "1.0.164", features = ["derive"] }
serde_json = "1.0.99"
uuid = { version = "1.3.4", features = ["v4"] }

[profile.release]
opt-level = 3
lto = true